wrap all pages in container with padding, clean up manage inventory page, add pattern, fix button placements.

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -22,12 +22,13 @@ body {
 }
 
 ul {
-  list-style: none;
-  padding: 0;
-  margin: 0;
+    list-style: none;
+    padding: 0;
+    margin: 0;
 }
+
 a {
-  text-decoration: none;
+    text-decoration: none;
 }
 
 .container {
@@ -36,6 +37,14 @@ a {
 
     .jumbotron {
         border-radius: 0px;
+    }
+}
+
+.container-wrapper {
+    padding: 30px;
+
+    @media (max-width: 480px) {
+        padding: 0px;
     }
 }
 
@@ -452,7 +461,6 @@ body {
     box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
 }
 
-
 @media (min-width: 480px) {
     .navbar-search {
         border-width: 1px 0;
@@ -474,32 +482,36 @@ body {
     }
 }
 
-
 $primary-color: #333;
+
 .flex-menu {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  text-align: center;
-  margin: 0;
-  li {
-    width: 100%;
-    font-size: .8em;
-  }
-  a {
-    color: white;
-    display: block;
-    text-decoration: none;
-    padding: 1em;
-    background: $secondary-pink;
-    transition: .5s;
-    &:hover {
-      background: lighten($primary-color, 6%);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    text-align: center;
+    margin: 0;
+
+    li {
+        width: 100%;
+        font-size: .8em;
     }
-  }
-  @media screen and (min-width: 600px) {
-    flex-direction: row;
-  }
+
+    a {
+        color: white;
+        display: block;
+        text-decoration: none;
+        padding: 1em;
+        background: $secondary-pink;
+        transition: .5s;
+
+        &:hover {
+            background: lighten($primary-color, 6%);
+        }
+    }
+
+    @media screen and (min-width: 600px) {
+        flex-direction: row;
+    }
 }
 
 .sort {
@@ -507,14 +519,60 @@ $primary-color: #333;
     background-color: $primary-black;
     padding: 10px;
     margin: 0;
+
     a {
         padding: 10px;
         color: white;
     }
+
     i {
         color: white;
     }
+
     @media screen and (max-width: 600px) {
-    text-align: center;
-  }
+        text-align: center;
+    }
+}
+
+.glyphicon {
+    margin-right: 5px;
+}
+
+.item.list-group-item {
+    float: none;
+    width: 100%;
+    background-color: #fff;
+    border: none;
+    padding: none;
+}
+
+.item.list-group-item .list-group-image {
+    margin-right: 10px;
+}
+
+.item.list-group-item .thumbnail {
+    margin-bottom: 0px;
+    padding: 0px;
+}
+
+.item.list-group-item .caption {
+    padding: 10px;
+    background-image: url("https://www.dropbox.com/s/ko8b8hscbq9i6fd/pink_rice.png?raw=1");
+    min-height: 200px;
+}
+
+.item.list-group-item:before, .item.list-group-item:after {
+    display: table;
+    content: " ";
+}
+
+.item.list-group-item img {
+    float: left;
+    height: 200px;
+    width: 300px;
+    padding: 0px 10px 0px 0px;
+}
+
+.align-right {
+    text-align: right;
 }
